--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
   },
   "devDependencies": {
     "parcel": "^2.10.3"
+  },
+  "dependencies": {
+    "@parcel/core": "^2.10.3",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.2"
   }
 }
